fixed bug status display wrong color, add missing status code

--- a/install_manager/install_manager/page/job_detail/job_detail.css
+++ b/install_manager/install_manager/page/job_detail/job_detail.css
@@ -38,6 +38,10 @@
     color: var(--color-green-light) !important;
 }
 
+.color-status-completed {
+    color: var(--color-complete) !important;
+}
+
 .margin-top-20 {
     margin-top: 20px;
 }
